2010-01-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        REGRESSION (r53420): incomplete repaint of bottom of bugs.webkit.org comment field
        https://bugs.webkit.org/show_bug.cgi?id=33809

        * fast/repaint/trailing-floats-root-line-box-overflow-expected.checksum: Added.
        * fast/repaint/trailing-floats-root-line-box-overflow-expected.png: Added.
        * fast/repaint/trailing-floats-root-line-box-overflow-expected.txt: Added.
        * fast/repaint/trailing-floats-root-line-box-overflow.html: Added.

2010-01-18  Alexey Proskuryakov  <ap@apple.com>

        Rubber-stamped by Adam Roben.

        Change a newly added WebSocket test to work on Windows.

        * websocket/tests/multiple-connections.html: Decrease the number of simultaneous connections
        from 100 to 50. On Windows buildbot, only ~70 connections are allowed for some reason - but
        we only need much fewer to compare to HTTP simultaneous connection limit anyway.

2010-01-18  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Skip test introduced in r53423 because of missing layoutTestController.setDomainRelaxationForbiddenForURLScheme()

        * platform/qt/Skipped: http/tests/security/setDomainRelaxationForbiddenForURLScheme.html added.

2010-01-18  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Ariya Hidayat.

        [Qt] Add platform dependent expected file because of different font size.

        * platform/qt/fast/dynamic/float-in-trailing-whitespace-after-last-line-break-2-expected.txt: Copied from LayoutTests/fast/dynamic/float-in-trailing-whitespace-after-last-line-break-2-expected.txt.

2010-01-18  Timothy Hatcher  <timothy@apple.com>

        Updated results for scroll position while zoomed.

        <rdar://problem/6150099> Zooming should keep the page content in the same place

        Rubber-stamped by Sam Weinig.

        * fast/css/zoom-body-scroll-expected.txt:

2010-01-18  Adam Roben  <aroben@apple.com>
