@@ -1,3 +1,13 @@
+2010-01-18  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Geoffrey Garen.
+
+        https://bugs.webkit.org/show_bug.cgi?id=33813
+        <rdar://problem/7545104> Crash when using DOMApplicationCache from a destroyed frame
+
+        * http/tests/appcache/destroyed-frame-expected.txt: Added.
+        * http/tests/appcache/destroyed-frame.html: Added.
+
 2010-01-18  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler.
